# Bat-Jump

./: Bullet.cpp  Bullet.h  CMakeLists.txt  Enemy.cpp  Enemy.h  First_Commit.patch  GameObject.cpp  GameObject.h  Level.cpp  Level.h  Platform.cpp  Platform.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  main.cpp
